--- a/file.css
+++ b/file.css
@@ -19,15 +19,20 @@ section {
     justify-content: start;
     padding-top: 21px;
 }
+.button-complectation {
+    display: grid;
+    gap: 100px;
+    grid-template-columns: 1fr 1fr;
+}
 .button-product {
-    border: 2px solid rgb(92, 92, 92);
+    border: 2px solid rgb(218, 218, 218);
     font-size: 100%;
     background-color: white;
-    border-radius: 23px;
+    border-radius: 15px;
 }
 .button-color {
     padding: 15px 15px;
-    border: 2px solid rgb(92, 92, 92);
+    border: 2px solid rgb(218, 218, 218);
     border-radius: 100%;
 }
 .button {
