--- a/file.css
+++ b/file.css
@@ -11,6 +11,67 @@ body {
     height: 100%;
     width: 100%;
 }
+
+
+.form__group {
+    position: relative;
+    padding: 15px 0 0;
+    
+    width: 50%;
+}
+
+.form__field {
+    font-family: inherit;
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid gray;
+    outline: 0;
+    font-size: 1.3rem;
+    color: black;
+    padding: 0px 0;
+    background: transparent;
+    transition: border-color 0.2s;
+  
+    &::placeholder {
+      color: transparent;
+    }
+  
+    &:placeholder-shown ~ .form__label {
+      font-size: 1.3rem;
+      cursor: text;
+      top: 20px;
+    }
+}
+
+.form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: gray;
+}
+
+.form__field:focus {
+    ~ .form__label {
+      position: absolute;
+      top: 0;
+      display: block;
+      transition: 0.2s;
+      font-size: 1rem;
+      color: #000000;
+      font-weight:700;    
+    }
+    
+    border-width: 3px;
+    border-image: linear-gradient(to right, #535353, #afafaf);
+    border-image-slice: 1;
+}
+
+.form__field{
+    &:required,&:invalid { box-shadow:none; }
+}
+
 section {
     position: absolute;
     inset: 0;
